# llm-sc-app

./: AGENTS.md  dashboard_test.html  pyproject.toml  requirements.txt  skills-lock.json  to-do-api-plan.md  to-do-api.md
app/: .env  __init__.py  dependencies.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  router.py
app/api/v1/routers/: __init__.py  actions.py  ai_insights.py  analytics.py  auth.py  dashboard.py  health.py  heritage.py  reviews.py
app/core/: __init__.py  config.py
app/db/: supabase_client.py
app/models/: __init__.py  action_item.py  analytics_checkpoint.py  analytics_run.py  aspect_metric.py  cleaned_review.py  entity.py  entity_alias.py  entity_mention.py  entity_ranking.py  entity_raw.py  extraction_checkpoint.py  metric_current.py  metric_history.py  narrative_insight.py  normalization_checkpoint.py  normalization_run.py  relation.py  relation_mention.py  relation_raw.py  scrape_run.py  sentiment.py  sentiment_mention.py  sentiment_raw.py  viz_metadata.py
app/schemas/: action.py  dashboard.py  user.py
app/services/: llm_recommendations.py
llm_sc_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  test_auth.py  test_health.py  test_heritage_endpoints.py
